                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-04-2006 fixed: Blank progress bar would show when deleting files.
 - 12-04-2006 fixed: Controller thumbsticks could register left or right after first pushing up or down when the stick was rotated.
 - 12-04-2006 fixed: Control.HasFocus and ButtonScroller.HasIcon had restricted ID ranges.
 - 12-04-2006 fixed: Zoom animation couldn't assign different zoom amounts to x and y directions.
 - 12-04-2006 changed: filenames from local harddrive are converted to UTF-8 as bioses like the Evox M8 Plus can support GBK charset
                       This hopefully fixes parts of sf bug: [ 1456741 ] New Language Set Case some Unicode GUI Display Error
 - 12-04-2006 changed: content of zip archives is converted from user charset to UTF-8 now
 - 12-04-2006 fixed: [ 1467762 ] Incorrect flash type shown on TSOP flashed boxes
 - 12-04-2006 fixed: redundant vis empty albumart update.
 - 12-04-2006 fixed: ttf font's wouldn't show up in subtitle font selection.
 - 11-04-2006 fixed: hopefully all issues caused by the extension handling and code cleanup [10-04-2006] should have been fixed
 - 11-04-2006 changed: albumart passes c_str to visualistion instead of string object
 - 11-04-2006 fixed: ccx/xbmsp shares
 - 11-04-2006 fixed: MyPrograms contextmenu wouldn't display launch options for xbe's
 - 11-04-2006 fixed: [ 1467935 ] Unnecessary logging of ERROR: unable to load Startup.xml
 - 10-04-2006 fixed: files/directories with url encoding strings such as %20 in them would fail to work over smb
 - 10-04-2006 changed: handling of file extension + code cleanup